<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/book_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/book_icoTitle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/book_TitleLayout"
        app:srcCompat="@drawable/password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_TitleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/book_icoTitle"
        app:layout_constraintTop_toBottomOf="@+id/book_logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/book_icoWritter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/book_writter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_icoTitle"
        app:srcCompat="@drawable/password" />

    <Spinner
        android:id="@+id/book_writter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btAddAutor"
        app:layout_constraintStart_toEndOf="@+id/book_icoWritter"
        app:layout_constraintTop_toTopOf="@+id/book_icoWritter" />

    <Button
        android:id="@+id/btAddAutor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/book_icoWritter" />

    <ImageView
        android:id="@+id/book_icoDate"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_icoWritter"
        app:srcCompat="@drawable/password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_dateStartLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toEndOf="@+id/book_icoDate"
        app:layout_constraintTop_toTopOf="@+id/book_icoDate">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/book_dateStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateStart"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/book_dateFinishLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintStart_toEndOf="@+id/book_dateStartLayout"
        app:layout_constraintTop_toTopOf="@+id/book_dateStartLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/book_dateFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateFinish"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/book_icoState"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_icoDate"
        app:srcCompat="@drawable/password" />

    <Spinner
        android:id="@+id/book_spState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/book_icoState"
        app:layout_constraintTop_toBottomOf="@+id/book_dateStartLayout" />


</android.support.constraint.ConstraintLayout>